--- a/src/index.html
+++ b/src/index.html
@@ -1234,7 +1234,7 @@
             <img class="cta3ImgArrow1" src="./assets/images/cta3/cta3MediumArrowBlur.png" alt="#">
             <img class="cta3ImgArrow2" src="./assets/images/cta3/cta3MediumArrow.png" alt="#">
             <img class="cta3ImgArrow3" src="./assets/images/cta3/cta3SmallArrow.png" alt="#">
-            <img class="cta3ImgArrow4" src="./assets/images/cta3/cta3MediumArrow.png" alt="#">
+            <!-- <img class="cta3ImgArrow4" src="./assets/images/cta3/cta3MediumArrow.png" alt="#"> -->
             <img class="cta3ImgArrow5" src="./assets/images/cta3/cta3SmallArrow.png" alt="#">
             <img class="cta3ImgArrow6" src="./assets/images/cta3/cta3MediumArrowBlur.png" alt="#">
         </div>
