--- a/src/index.html
+++ b/src/index.html
@@ -83,8 +83,28 @@
 
         <div class="algoritmContainer">
             <div class="marquee">
-                <span class="marqSpan"><span>умная заявка</span> &#8212; алгоритм для увеличения алгоритм для
+                <!-- <span class="marqSpan"><span>умная заявка</span> &#8212; алгоритм для увеличения алгоритм для
                     увеличения</span>
+                <span class="marqSpan"><span>умная заявка</span> &#8212; алгоритм для увеличения алгоритм для
+                    увеличения</span> -->
+                    <div class="swiper infinite-stroke-1">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide swiper-no-swiping"><span class="marqSpan"><span>умная заявка</span> &#8212; алгоритм для увеличения алгоритм для
+                                увеличения</span>
+                                <span class="marqSpan"><span>умная заявка</span> &#8212; алгоритм для увеличения алгоритм для
+                                увеличения</span>
+                                <span class="marqSpan"><span>умная заявка</span> &#8212; алгоритм для увеличения алгоритм для
+                                увеличения</span>
+                            </div>
+                            <div class="swiper-slide swiper-no-swiping"><span class="marqSpan"><span>умная заявка</span> &#8212; алгоритм для увеличения алгоритм для
+                                увеличения</span>
+                                <span class="marqSpan"><span>умная заявка</span> &#8212; алгоритм для увеличения алгоритм для
+                                увеличения</span>
+                                <span class="marqSpan"><span>умная заявка</span> &#8212; алгоритм для увеличения алгоритм для
+                                увеличения</span>
+                            </div>
+                        </div>
+                    </div>
             </div>
 
             <div class="requestContainer">
@@ -114,7 +134,18 @@
 
         <div class="siteContainer">
             <div class="siteLine">
-                <span class="siteLineSpan">ваш собственный сайт <span>и кабинет клиента</span></span>
+                <div class="swiper infinite-stroke-2">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide swiper-no-swiping">
+                            <span class="siteLineSpan">ваш собственный сайт <span>и кабинет клиента</span></span>
+                            <span class="siteLineSpan">ваш собственный сайт <span>и кабинет клиента</span></span>
+                        </div>
+                        <div class="swiper-slide swiper-no-swiping">
+                            <span class="siteLineSpan">ваш собственный сайт <span>и кабинет клиента</span></span>
+                            <span class="siteLineSpan">ваш собственный сайт <span>и кабинет клиента</span></span>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="requestContainer secondLine">
@@ -142,7 +173,7 @@
 
         <div class="businessContainer">
             <div class="businessLine">
-                <span class="businessLineSpan">помощь <span>бизнес аналитика.</span>
+                <!-- <span class="businessLineSpan">помощь <span>бизнес аналитика.</span>
                     <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
                     <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
                     <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
@@ -154,7 +185,44 @@
                     <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
                     <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
                     <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
-                    помощь</span>
+                    помощь
+                </span> -->
+                <div class="swiper infinite-stroke-3">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide swiper-no-swiping">
+                            <span class="businessLineSpan">помощь <span>бизнес аналитика.</span>
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            помощь помощь <span>бизнес аналитика.</span>
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            помощь помощь <span>бизнес аналитика.</span>
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            помощь
+                        </span>
+                        </div>
+                        <div class="swiper-slide swiper-no-swiping">
+                            <span class="businessLineSpan">помощь <span>бизнес аналитика.</span>
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            помощь помощь <span>бизнес аналитика.</span>
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            помощь помощь <span>бизнес аналитика.</span>
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            <img src="./assets/images/businessContainer/lineArrow.png" alt="#">
+                            помощь
+                        </span>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="requestContainer">
@@ -539,26 +607,24 @@
         <div class="wrapper">
             <div class="swiper loopSwiper">
             <div class="swiper-wrapper">
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/avitoLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/cianLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/domclickLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/youlaLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/nedvijLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/avitoLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/cianLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/domclickLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/youlaLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/nedvijLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/avitoLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/cianLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/domclickLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/youlaLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/nedvijLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/avitoLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/cianLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/domclickLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/youlaLogo.png" alt="#"></div>
-            <div class="swiper-slide swiper-no-swiping"><img src="./assets/images/integration/nedvijLogo.png" alt="#"></div>
+            <div class="swiper-slide swiper-no-swiping">
+            <ul>
+                <li><img src="./assets/images/integration/avitoLogo.png" alt="#"></li>
+                <li><img src="./assets/images/integration/cianLogo.png" alt="#"></li>
+                <li><img src="./assets/images/integration/domclickLogo.png" alt="#"></li>
+                <li><img src="./assets/images/integration/youlaLogo.png" alt="#"></li>
+                <li><img src="./assets/images/integration/nedvijLogo.png" alt="#"></li>
+            </ul>
+            </div>
+            <div class="swiper-slide swiper-no-swiping">
+                <ul>
+                    <li><img src="./assets/images/integration/avitoLogo.png" alt="#"></li>
+                    <li><img src="./assets/images/integration/cianLogo.png" alt="#"></li>
+                    <li><img src="./assets/images/integration/domclickLogo.png" alt="#"></li>
+                    <li><img src="./assets/images/integration/youlaLogo.png" alt="#"></li>
+                    <li><img src="./assets/images/integration/nedvijLogo.png" alt="#"></li>
+                </ul>
+            </div>
             </div>
             </div>
             <!-- <ul>
