sa[kf[sakf[sakfmwkfnncmxczm,m

--- a/src/index.html
+++ b/src/index.html
@@ -261,11 +261,22 @@
                         <!-- <img src="./assets/images/capabilities/ticker.png" alt="#"> -->
                         <div class="swiper ticker__swiper">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide"><img src="./assets/images/svg/slider/cian.svg" alt=""></div>
-                                <div class="swiper-slide"><img src="./assets/images/svg/slider/avito.svg" alt=""></div>
-                                <div class="swiper-slide"><img src="./assets/images/svg/slider/dom-clean.svg" alt="">
+                                <div class="swiper-slide">
+                                    <div><img src="./assets/images/svg/slider/cian.svg" alt=""></div>
+                                    <div><img src="./assets/images/svg/slider/avito.svg" alt=""></div>
+                                    <div><img src="./assets/images/svg/slider/dom-clean.svg" alt="">
+                                    </div>
+                                    <div><img src="./assets/images/svg/slider/yandex.svg" alt=""></div>
                                 </div>
-                                <div class="swiper-slide"><img src="./assets/images/svg/slider/yandex.svg" alt=""></div>
+
+                                <div class="swiper-slide">
+                                    <div><img src="./assets/images/svg/slider/cian.svg" alt=""></div>
+                                    <div><img src="./assets/images/svg/slider/avito.svg" alt=""></div>
+                                    <div><img src="./assets/images/svg/slider/dom-clean.svg" alt="">
+                                    </div>
+                                    <div><img src="./assets/images/svg/slider/yandex.svg" alt=""></div>
+                                </div>
+                                
                             </div>
                             <div class="swiper-pagination"></div>
                         </div>
@@ -297,7 +308,7 @@
         </div>
 
         <div class="dropLineContainer">
-            <img src="./assets/images/capabilities/dropLine.png" alt="#">
+            <img src="./assets/images/capabilities/dropLine.svg" alt="#">
         </div>
 
         <div class="addContainer">
@@ -328,7 +339,7 @@
         </div>
 
         <div class="dropLineContainer mt15">
-            <img src="./assets/images/capabilities/dropLine.png" alt="#">
+            <img src="./assets/images/capabilities/dropLine.svg" alt="#">
         </div>
 
         <div class="objectContainer">
@@ -343,14 +354,28 @@
                             <!-- <img src="./assets/images/capabilities/ticker.png" alt="#"> -->
                             <div class="swiper ticker__swiper">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img src="./assets/images/svg/slider/cian.svg" alt="">
+                                    <div class="swiper-slide">
+                                        <div><img src="./assets/images/svg/slider/cian.svg" alt="">
+                                        </div>
+                                        <div><img src="./assets/images/svg/slider/avito.svg" alt="">
+                                        </div>
+                                        <div><img src="./assets/images/svg/slider/dom-clean.svg"
+                                                alt=""></div>
+                                        <div><img src="./assets/images/svg/slider/yandex.svg" alt="">
+                                        </div>
                                     </div>
-                                    <div class="swiper-slide"><img src="./assets/images/svg/slider/avito.svg" alt="">
+
+                                    <div class="swiper-slide">
+                                        <div><img src="./assets/images/svg/slider/cian.svg" alt="">
+                                        </div>
+                                        <div><img src="./assets/images/svg/slider/avito.svg" alt="">
+                                        </div>
+                                        <div><img src="./assets/images/svg/slider/dom-clean.svg"
+                                                alt=""></div>
+                                        <div><img src="./assets/images/svg/slider/yandex.svg" alt="">
+                                        </div>
                                     </div>
-                                    <div class="swiper-slide"><img src="./assets/images/svg/slider/dom-clean.svg"
-                                            alt=""></div>
-                                    <div class="swiper-slide"><img src="./assets/images/svg/slider/yandex.svg" alt="">
-                                    </div>
+                                    
                                 </div>
                                 <div class="swiper-pagination"></div>
                             </div>
@@ -386,7 +411,7 @@
         </div>
 
         <div class="dropLineContainer">
-            <img src="./assets/images/capabilities/dropLine.png" alt="#">
+            <img src="./assets/images/capabilities/dropLine.svg" alt="#">
         </div>
 
 
@@ -402,14 +427,27 @@
                         <!-- <img src="./assets/images/capabilities/ticker.png" alt="#"> -->
                         <div class="swiper contacts__swiper">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide"><a href="#"><img src="./assets/images/svg/slider/vk.svg"
-                                            alt=""></a></div>
-                                <div class="swiper-slide"><a href="#"><img src="./assets/images/svg/slider/inst.svg"
-                                            alt=""></a></div>
-                                <div class="swiper-slide"><a href="#"><img src="./assets/images/svg/slider/telagram.svg"
-                                            alt=""></a></div>
-                                <div class="swiper-slide"><a href="#"><img src="./assets/images/svg/slider/whatsup.svg"
-                                            alt=""></a></div>
+                                <div class="swiper-slide">
+                                    <div><a href="#"><img src="./assets/images/svg/slider/vk.svg"
+                                        alt=""></a></div>
+                                    <div><a href="#"><img src="./assets/images/svg/slider/inst.svg"
+                                                alt=""></a></div>
+                                    <div><a href="#"><img src="./assets/images/svg/slider/telagram.svg"
+                                                alt=""></a></div>
+                                    <div><a href="#"><img src="./assets/images/svg/slider/whatsup.svg"
+                                                alt=""></a></div>
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <div><a href="#"><img src="./assets/images/svg/slider/vk.svg"
+                                        alt=""></a></div>
+                                    <div><a href="#"><img src="./assets/images/svg/slider/inst.svg"
+                                                alt=""></a></div>
+                                    <div><a href="#"><img src="./assets/images/svg/slider/telagram.svg"
+                                                alt=""></a></div>
+                                    <div><a href="#"><img src="./assets/images/svg/slider/whatsup.svg"
+                                                alt=""></a></div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -438,7 +476,7 @@
         </div>
 
         <div class="dropLineContainer">
-            <img src="./assets/images/capabilities/dropLine.png" alt="#">
+            <img src="./assets/images/capabilities/dropLine.svg" alt="#">
         </div>
 
         <div class="controllContainer">
@@ -471,7 +509,7 @@
 
 
         <div class="dropLineContainer">
-            <img src="./assets/images/capabilities/dropLine.png" alt="#">
+            <img src="./assets/images/capabilities/dropLine.svg" alt="#">
         </div>
 
 
@@ -542,7 +580,7 @@
             <img class="cta1Arrow2" src="./assets/images/cta1/cta1SmallArrow.png" alt="#">
             <img class="cta1Arrow3" src="./assets/images/cta1/cta1MediumArrow.png" alt="#">
             <img class="cta1Arrow4" src="./assets/images/cta1/cta1SmallBlurArrow.png" alt="#">
-            <img class="cta1Arrow5" src="./assets/images/cta1/cta1MediumArrow.png" alt="#">
+            <!-- <img class="cta1Arrow5" src="./assets/images/cta1/cta1MediumArrow.png" alt="#"> -->
             <img class="cta1Arrow6" src="./assets/images/cta1/cta1SmallArrow.png" alt="#">
         </div>
     </div>
